# changelog

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yaml
migrations/: 20230513220159_initial.sql
sql/: 00_schema.sql
src/: main.rs  models.rs  repository.rs  telemetry.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/lib/: store.ts
ui/src/lib/types/: entry.ts
ui/src/routes/: +page.server.ts  +page.svelte  Entry.svelte  Header.svelte  styles.css
