[package]
name = "changelog"
description = "HTTP API for Changelog"
version = "0.0.1"
edition = "2021"
resolver = "2"
authors = ["matousdzivjak@gmail.com"]
readme = "README.md"
repository = "https://github.com/matoous/changelog/"
keywords = ["changelog", "api"]

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "compress-gzip", "compress-zstd"] }
chrono = { version = "0.4.0", features = ["serde"]}
config = "0.13.3"
derive_more = "0.99.17"
dotenv = "0.15.0"
ormlite = { git = "https://github.com/kurtbuilds/ormlite.git", features = ["default", "postgres", "chrono", "uuid"] }
serde = { version = "1.0.150", features = ["derive"] } 
uuid = { version = "1.4.0", features=  ["v7", "serde", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
testcontainers = "0.14.0"
